--- a/GCScript_for_Excel.csproj
+++ b/GCScript_for_Excel.csproj
@@ -156,6 +156,7 @@
     can be found.
   -->
   <ItemGroup>
+    <Compile Include="Classes\cl_AdjustBalanceDaysValueColumns.cs" />
     <Compile Include="Classes\cl_ExcelFunctions_new.cs" />
     <Compile Include="Classes\cl_GenerateFileToSend.cs" />
     <Compile Include="Classes\cl_GeneratePurchase_new.cs" />
@@ -165,6 +166,7 @@
     <Compile Include="Classes\cl_Tools.cs" />
     <None Include="Classes\cl_CriarCompra.cs.bk" />
     <Compile Include="Classes\cl_GeneratePurchase.cs" />
+    <Compile Include="Classes\ColumnsName.cs" />
     <Compile Include="frm_Settings.cs">
       <SubType>Form</SubType>
     </Compile>
