--- a/GCScript_for_Excel.csproj
+++ b/GCScript_for_Excel.csproj
@@ -100,6 +100,9 @@
   -->
   <ItemGroup>
     <Reference Include="Accessibility" />
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -163,9 +166,10 @@
     <Compile Include="Classes\cl_Settings.cs" />
     <Compile Include="Classes\ExcelFunctions.cs" />
     <Compile Include="Classes\cl_GenerateApportionment.cs" />
-    <Compile Include="Classes\cl_Tools.cs" />
+    <Compile Include="Classes\Tools.cs" />
     <Compile Include="Classes\cl_GeneratePurchase.cs" />
     <Compile Include="Classes\ColumnsName.cs" />
+    <Compile Include="Classes\TransferData.cs" />
     <Compile Include="frm_Settings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -196,6 +200,7 @@
       <DependentUpon>rbb_Main.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="GCScript_for_Excel_TemporaryKey.pfx" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
