--- a/GCScript_for_Excel.csproj
+++ b/GCScript_for_Excel.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Classes\cl_Settings.cs" />
     <Compile Include="Classes\ExcelFunctions.cs" />
     <Compile Include="Classes\cl_GenerateApportionment.cs" />
+    <Compile Include="Classes\PurchaseCreator.cs" />
     <Compile Include="Classes\Tools.cs" />
     <Compile Include="Classes\cl_GeneratePurchase.cs" />
     <Compile Include="Classes\ColumnsName.cs" />
